1. Update help page. 2. Update security page.

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/help/index.html
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/help/index.html
@@ -45,109 +45,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">RIDDANCE HELP</a>
+                <a class="navbar-brand" href="index.html">Riddance DVT Help</a>
+                <a class="navbar-brand" href="http://clinicaldatas.net/wwf1/web-tracker-capture/index.html#/">Home</a>
             </div>
-            <!-- Top Menu Items -->
-            <!--ul class="nav navbar-right top-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
-                    <ul class="dropdown-menu message-dropdown">
-                        <li class="message-preview">
-                            <a href="#">
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="message-preview">
-                            <a href="#">
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="message-preview">
-                            <a href="#">
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="message-footer">
-                            <a href="#">Read All New Messages</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-                    <ul class="dropdown-menu alert-dropdown">
-                        <li>
-                            <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">View All</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul-->
+           
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav" id="menu-left">
@@ -274,7 +175,7 @@
                                     </li>
 
                                     <li> Để xem toàn bộ danh sách bệnh nhân đang tham gia nghiên cứu thì ấn vào nút <button type="button" class="btn btn-success ng-binding ng-scope"> List all </button> trên màn hình để hiển thị toàn bộ danh sách như dưới: <br>
-                                        <img src="./picture/List_all_1.jpg" style="margin: 10px; width: 95%; ">
+                                        <img src="./picture/ListAll_2.jpg" style="margin: 10px; width: 95%; ">
                                         <p>Trong đó:</p>
                                             <ul style="list-style-type: square;">
                                                 <li><img src="./picture/2.jpg" style="width: 150px; height:25px; ">: Với textbox này, được mặc định là 50 dòng trên một trang, nếu bạn muốn chỉnh số lượng dòng trên một trang thì nhập một con số khác.</li>
@@ -304,7 +205,7 @@
                                   
                                   <!-- Phần đăng kí -->
                                   <!-- <b>Register</b> -->
-                                  <li> Nếu có bệnh nhân mới tham gia vào nghiên cứu, click vào nút <button type="button" class="btn btn-primary ng-binding">Register</button> để tạo một đăng kí mới. Khi click vào button này một form đăng kí sẽ hiển thị như sau: <br>
+                                  <li> Nếu có bệnh nhân mới tham gia vào nghiên cứu, click vào nút <button type="button" class="btn btn-primary ng-binding ng-scope"> Enroll </button> để tạo một đăng kí mới. Khi click vào button này một form đăng kí sẽ hiển thị như sau: <br>
                                   <img src="./picture/dangki.jpg" alt=""> 
                                   <p>Trong đó:</p>
                                       <ul style="list-style-type: square;">
@@ -364,11 +265,11 @@
                                     </ul>
 
                                 <b>Timeline Data Entry</b><br> 
-                                    <img src="./picture/TimeLine.jpg" style="margin: 10px;">
+                                    <img src="./picture/TimeLine_1.jpg" style="margin: 10px;">
                                     <p>Trong đó: </p>
                                     <ul>
                                         <li>Icon <i class="fa fa-info-circle vertical-center"></i>: Click vào icon này, hiển thị bảng giải thích màu sắc sẽ hiển thị trên các stage và section trong nghên cứu.<br>
-                                        <img src="./picture/legend_color.jpg" style="margin: 10px;"></li>
+                                        <img src="./picture/legend_color_1.jpg" style="margin: 10px;"></li>
 
                                         <li>Icon <i class="glyphicon glyphicon-user"></i>: Click vào icon này, hiển thị ra bảng các data elements đã làm như bên dưới: <br>
                                             <img src="./picture/AuditHistory.jpg" style="margin: 10px; float: center;">
@@ -391,7 +292,7 @@
                                         <li>Có 5 stages chính được hiển thị như hình bên dưới: <br>
                                             <img src="./picture/Stage_5.jpg" style="margin: 15px 0;"><br>
                                             <p>Với màu sắc của mỗi stage sẽ được định nghĩa như sau:</p>
-                                            <img src="./picture/legend_color.jpg" style="margin: 10px;">
+                                            <img src="./picture/legend_color_1.jpg" style="margin: 10px;">
 
                                         </li>
 
